--- a/src/main/resources/assets/design-system/table.scss
+++ b/src/main/resources/assets/design-system/table.scss
@@ -14,8 +14,10 @@
       padding: calc(0.25 * var(--sci-base-unit));
     }
 
-    tr.sci-cursor-pointer:hover {
-      background-color: rgba(0, 0, 0, .05);
+    @media (hover: hover) {
+      tr.sci-cursor-pointer:hover {
+        background-color: rgba(0, 0, 0, .05);
+      }
     }
   }
 
